--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,30 +1,3 @@
-html,
-body {
-  height: 100%;
-}
-
-/*----------------------Header--------------------------*/
-
-header {
-  position: fixed;
-  width: 100%;
-  left: 0;
-  top: 0;
-  z-index: 99999;
-  padding: 20px 0;
-  &.sticky {
-    background: #fff;
-    box-shadow: 0px 1px 8px 0px rgba(205, 205, 205, 1);
-    .mobile-menu-btn {
-      span {
-        background: $dark;
-      }
-    }
-  }
-  &.active {
-    background: #fff;
-  }
-}
 
 /*------------------Mobile menu---------------------*/
 .mobile-menu-wrapper {
@@ -92,7 +65,7 @@ header {
 }
 
 /*------------------Desktop nav-------------------------*/
-header {
+.site-header {
   &.sticky {
     .desktop-menu-wrapper {
       .menu {
@@ -192,589 +165,15 @@ header {
   }
 }
 
-/*-----------------Specialize section------------------------------*/
 
-.specialize-section {
-  .simple-text-block {
-    text-align: center;
-  }
-}
 
-.icon-text-block {
-  .description-block {
-    text-align: center;
-    font-size: 15px;
-  }
-}
 
-/*-----------------------Packages section------------------------------------*/
-.packages-section {
-  padding: 60px 0;
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  position: relative;
-  .simple-text-block {
-    text-align: center;
-    .section-title {
-      margin-bottom: 30px;
-    }
-  }
-}
 
-.packages-card {
-  background: $packages-card-bg;
-  text-align: center;
-  padding: 35px 15px 75px;
-  width: 300px;
-  max-width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  transition: all 0.3s ease-in-out;
-  position: relative;
-  &:hover {
-    transition: all 0.3s ease-in-out;
-    transform: scale(1.1);
-  }
-  .card-price {
-    font-size: 50px;
-    color: $card-price-color;
-    font-weight: 800;
-    line-height: 1;
-    margin-top: 7px;
-    display: inline-block;
-    letter-spacing: 2px;
-  }
-  .card-period {
-    color:: #0C262D;
-    font-weight: 700;
-    font-size: 15px;
-    margin-bottom: 20px;
-  }
-  ul.card-list {
-    margin: 0;
-    margin-bottom: 35px;
-    padding: 0;
-    li {
-      display: block;
-      font-size: 15px;
-      line-height: 1;
-      margin-bottom: 15px;
-    }
-  }
-  .card-button-container {
-    position: absolute;
-    bottom: 35px;
-    width: 100%;
-    left: 50%;
-    transform: translate(-50%, 0);
-    .btn {
-      &.custom-btn {
-        padding: 10px 25px;
-      }
-    }
-  }
-}
 
-.packages-slider-container {
-  padding: 40px 0;
-  .swiper-container, .swiper-wrapper {
-    overflow: visible;
-  }
-}
 
-/*-----------------------Guarantee sections-------------------------------*/
 
-.guarantee-section {
-  .main-guarantee-text {
-    height: 100%;
-    .row {
-      background-color: $blue;
-      height: 100%;
-      padding: 80px 0 40px;
-      .guarantee-title-wrapper {
-        margin-right: 25px;
-        @media screen and (max-width: 767px){
-          margin:0;
-        }
-      }
-      .guarantee-title {
-        font-size: 103px;
-        margin-bottom: 15px;
-        font-weight: 800;
-        line-height: 0.8;
-        text-transform: uppercase;
-        color: #fff;
-        text-align: right;
-        @media screen and (max-width: 767px){
-         text-align: center;
-        }
-      }
-      .guarantee-subtitle {
-        text-transform: uppercase;
-        color: $dark-small-title;
-        font-size: 25px;
-        font-weight: 800;
-        text-align: right;
-        @media screen and (max-width: 767px){
-          text-align: center;
-        }
-      }
-    }
-  }
-  .promise-text-block {
-    padding: 80px 0 40px;
-    margin-left: 25px;
-    .small-title {
-      margin-bottom: 20px;
-    }
-    .promise-description {
-      margin-bottom: 55px;
-      p {
-        font-size: 15px;
-        line-height: 2;
-      }
-    }
-    .small-description {
-      p {
-        font-size: 10px;
-        font-style: italic;
-      }
-    }
-  }
-}
 
-/*--------------------Section Add-ons-------------------------*/
-.addons {
-  background: $grey-bg;
-  padding: 70px 0 110px;
-  position: relative;
-  overflow: hidden;
-  background: url('/dist/images/dots-bg.png');
-  background-repeat: no-repeat;
-  background-position: left bottom;
-  .icon-text-block {
-    .small-title {
-      text-align: center;
-    }
-  }
-}
 
-/*-------------------------Feedback section------------------------------*/
 
-.feedback-section {
-  padding: 80px 0 55px;
-  background-repeat: no-repeat;
-  background-position: center top;
-  background-size: cover;
-}
 
-.feedback-slider-wrapper {
-  .swiper-container {
-    padding: 35px 0 50px;
-  }
-  .feedback-block {
-    .feedback-content {
-      width: 340px;
-      max-width: 100%;
-      padding: 35px 20px;
-      border-radius: 10px;
-      background: #fff;
-      position: relative;
-      margin-bottom: 50px;
-      &:after {
-        position: absolute;
-        content: '';
-        display: block;
-        border: 20px solid transparent;
-        border-top: 20px solid #fff;
-        bottom: -40px;
-        left: 50%;
-        transform: translate(-50%, 0);
-      }
-      .feedback-title-block {
-        margin-bottom: 25px;
-        .small-title {
-          color: $dark-small-title;
-        }
-      }
-      .feedback-description {
-        p {
-          font-size: 15px;
-          color: $dark-small-title;
-          font-family: 'Roboto', sans-serif;
-        }
-      }
-      &.red-bg {
-        background: $red;
-        &:after {
-          border: 20px solid transparent;
-          border-top: 20px solid $red;
-        }
-        .feedback-title-block {
-          .small-title {
-            color: #fff;
-          }
-        }
-        .feedback-description {
-          p {
-            color: #fff;
-          }
-        }
-      }
-    }
-    .feedback-author-block {
-      span {
-        display: block;
-        color: #fff;
-        font-size: 15px;
-        &.client-name {
-          font-weight: 700;
-          letter-spacing: 2px;
-        }
-        &.company-name {
 
-        }
-      }
-    }
-  }
-  .swiper-pagination {
-    bottom: 0;
-    .swiper-pagination-bullet {
-      width: 15px;
-      height: 15px;
-      background: rgba(255, 255, 255, 0.5);
-      opacity: 1;
-      &.swiper-pagination-bullet-active {
-        background: #fff;
-      }
-    }
-  }
-}
-
-/*-------------------Portfolio section-----------------------------*/
-
-.portfolio-section {
-  padding: 80px 0 120px;
-  .simple-text-block {
-    //margin-bottom: 50px;
-  }
-  .portfolio-slider-wrapper {
-    .swiper-container {
-      padding: 40px 0 80px;
-      .portfolio-slide-block {
-        transition: all 0.3s ease-in-out;
-        a {
-          display: block;
-          img {
-            display: block;
-            max-width: 100%;
-            height: auto;
-          }
-        }
-        &:hover {
-          transition: all 0.3s ease-in-out;
-          transform: scale(1.1);
-        }
-      }
-    }
-    .swiper-pagination {
-      bottom: 0;
-      .swiper-pagination-bullet {
-        width: 15px;
-        height: 15px;
-        &.swiper-pagination-bullet-active {
-          background: $red;
-        }
-      }
-    }
-  }
-}
-
-/*----------------------Questions section---------------------------------*/
-
-.questions-section {
-  background: $grey-bg;
-  padding: 70px 0;
-}
-
-.questions-accordion-wrapper {
-  .questions-card {
-    border: 0;
-    background: transparent;
-    .btn-custom-link {
-      &.btn {
-        text-align: left;
-        padding: 15px 0;
-        font-family: 'Roboto', sans-serif;
-        &.collapsed {
-          color: $body-text-color;
-          i {
-            color: $red;
-            transform: rotate(0deg);
-            transition: all 0.3s ease-in-out;
-          }
-        }
-        i {
-          color: $red;
-          transform: rotate(90deg);
-          transition: all 0.3s ease-in-out;
-        }
-        color: $red;
-        font-size: 18px;
-        text-decoration: none;
-      }
-    }
-    .questions-card-body {
-      &.card-body {
-        font-size: 15px;
-        font-family: 'Roboto', sans-serif;
-        font-weight: 400;
-        padding: 0;
-        margin-bottom: 15px;
-      }
-    }
-  }
-}
-
-/*---------------------About Us section---------------------------*/
-
-.contact-us {
-
-}
-
-.contact-form-wrapper {
-  text-align: center;
-  padding: 60px 20px 40px;
-  .small-title {
-    margin-bottom: 15px;
-  }
-  .form-quote-text {
-    color: #fff;
-    font-size: 12px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    margin-bottom: 20px;
-  }
-  .form-field {
-    margin-bottom: 10px;
-    input, textarea {
-      color: #fff;
-      background: transparent;
-      font-size: 12px;
-      border: 0;
-      border-bottom: 1px solid #fff;
-      box-shadow: none;
-      outline: none;
-      width: 300px;
-      max-width: 100%;
-      margin: 0 auto;
-      &:focus {
-        outline: none;
-      }
-      &::-webkit-input-placeholder {
-        /* Chrome/Opera/Safari */
-        color: #fff;
-      }
-      &::-moz-placeholder {
-        /* Firefox 19+ */
-        color: #fff;
-      }
-      &:-ms-input-placeholder {
-        /* IE 10+ */
-        color: #fff;
-      }
-      &:-moz-placeholder {
-        /* Firefox 18- */
-        color: #fff;
-      }
-    }
-  }
-  .form-button-container {
-    margin-top: 35px;
-    input[type='submit'] {
-      background: #fff;
-      color: $red;
-      padding: 10px 35px;
-      line-height: 1;
-      font-weight: 600;
-    }
-  }
-}
-
-.about-us-text-wrapper {
-  text-align: center;
-  width: 300px;
-  max-width: 100%;
-  margin: 0 auto;
-  .about-us-text {
-    p {
-      font-size: 12px;
-      font-family: 'Roboto', sans-serif;
-      line-height: 2;
-    }
-  }
-}
-
-.map-wrapper {
-  height: 100%;
-  .map-container {
-    height: inherit;
-    iframe {
-      height: 100% !important;
-      min-height: 450px;
-    }
-  }
-}
-
-/*-------------------------Describe package section---------------------------------*/
-
-.describe-package-section {
-  padding: 50px 0;
-  .package-title {
-    font-size: 60px;
-    font-weight: 700;
-  }
-  .package-price {
-    font-size: 40px;
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: 4px;
-  }
-  .package-price-description{
-    margin-top: 20px;
-    p{
-      margin-bottom: 0;
-      font-size: 20px;
-      font-family: 'Roboto', sans-serif;
-    }
-  }
-}
-
-.package-button-wrapper{
-text-align: right;
-  a{
-    color:#fff;
-    font-size: 20px;
-    font-weight: 600;
-    &:hover{
-      color:#fff;
-    }
-    &:first-child{
-      margin-right: 15px;
-    }
-  }
-}
-/*-------------------Get started section--------------------------*/
-
-.getStart-section {
-  background: $red;
-  padding: 50px 0;
-  .buttons-wrapper {
-    text-align: center;
-    margin-top: 30px;
-    a {
-      background: #fff;
-      color: $red;
-      width: 325px;
-      max-width: 100%;
-      font-size: 20px;
-      font-weight: 700;
-      text-transform: uppercase;
-      padding: 20px 15px;
-      line-height: 1;
-      &:hover {
-        color: $red;
-      }
-      &:first-child {
-        margin-right: 40px;
-        @media screen and (max-width: 992px){
-          display: block;
-          margin: 0 auto;
-          margin-bottom: 20px;
-        }
-      }
-    }
-  }
-}
-
-/*------------------------Guarantee-addons-section-----------------------------*/
-.guarantee-addons-section {
-
-}
-
-.guarantee-text-block {
-  text-align: center;
-  .middle-title{
-    margin-bottom: 45px;
-  }
-  .promise-description {
-    .small-title{
-      margin-bottom: 20px;
-    }
-    p {
-      color: #fff;
-      font-family: 'Roboto', sans-serif;
-      &.small-promise-text {
-        margin-top: 40px;
-        font-size: 10px;
-        font-style: italic;
-        letter-spacing: 1px;
-        margin-bottom: 0;
-      }
-    }
-  }
-}
-
-.addons-small-container {
-  text-align: center;
-  p {
-    font-family: 'Roboto', sans-serif;
-  }
-}
-
-.addons-column-wrapper, .guarantee-column-wrapper {
-  padding: 70px 0;
-}
-
-.addons-description-container {
-  text-align: center;
-}
-
-.addons-icon-container {
-  text-align: center;
-  .small-title {
-    line-height: 1.5;
-  }
-}
-
-/*--------------------Footer----------------------------*/
-
-footer {
-  background-color: $footer-bg;
-  color: $footer-color;
-  font-size: 12px;
-  padding: 30px 0;
-  .copyright-block {
-    span {
-      color: #fff;
-    }
-  }
-  .footer-menu {
-    text-align: right;
-    ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      li {
-        display: inline-block;
-        a {
-          color: $footer-color;
-          &:hover {
-            text-decoration: none;
-          }
-        }
-      }
-    }
-  }
-}
