--- a/src/styles/blocks/_packages-section.scss
+++ b/src/styles/blocks/_packages-section.scss
@@ -68,8 +68,7 @@
 }
 
 .packages-slider-container {
-  padding: 40px 0;
-  .swiper-container, .swiper-wrapper {
-    overflow: visible;
+  .swiper-container {
+    padding: 40px 0;
   }
 }
