--- a/src/styles/blocks/_specialize-section.scss
+++ b/src/styles/blocks/_specialize-section.scss
@@ -1,7 +1,7 @@
 /*-----------------Specialize section------------------------------*/
 
 .specialize-section {
-  padding: 0 0 50px;
+  padding: 50px 0;
   .simple-text-block {
     text-align: center;
     margin-bottom: 70px;
