--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,4 +1,3 @@
-
 /*------------------Mobile menu---------------------*/
 .mobile-menu-wrapper {
   display: none;
@@ -49,8 +48,26 @@
       li {
         display: block;
         text-align: center;
+        line-height: 1;
+        &:not(:last-child) {
+          padding-bottom: 30px;
+          margin-bottom: 30px;
+          position: relative;
+          &:after {
+            position: absolute;
+            content: '';
+            display: block;
+            height: 1px;
+            width: 55px;
+            background: $blue;
+            bottom: 0;
+            left: 50%;
+            transform: translate(-50%, 0);
+          }
+        }
         a {
           color: $dark;
+          font-size: 40px;
         }
       }
     }
@@ -86,6 +103,18 @@
     display: none;
   }
   .logo-wrapper {
+    background: rgba(255, 255, 255, 0.25);
+    position: relative;
+    &:after {
+      position: absolute;
+      content: '';
+      display: block;
+      height: 100%;
+      width: 100%;
+      top: 0;
+      left: 0;
+      box-shadow: 0px 0px 48px 48px rgba(255, 255, 255, 0.25);
+    }
     a {
       display: block;
       .logo {
@@ -134,6 +163,56 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  overflow-y: hidden;
+  .bottom-banner-triangles {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 90px;
+    z-index: 3;
+    .left-triangle, .right-triangle {
+      width: 50%;
+      position: relative;
+      &:after{
+        content: '';
+        background-image: linear-gradient(to right top, #fff 0%, #fff 49.9%, transparent 50%);
+        position: absolute;
+        width: 100%;
+        height: 120px;
+        bottom:0;
+        left: 0;
+        @media screen and (max-width: 768px){
+          height: 60px;
+        }
+        @media screen and (max-width: 600px){
+          height: 40px;
+        }
+      }
+      &:before{
+        content: '';
+        background-image: linear-gradient(to right top, $blue 0%, $blue 49.9%, transparent 50%);
+        position: absolute;
+        width: 100%;
+        height: 140px;
+        bottom:0;
+        left: 0;
+        @media screen and (max-width: 768px){
+          height: 80px;
+        }
+        @media screen and (max-width: 600px){
+          height: 55px;
+        }
+      }
+    }
+    .right-triangle{
+      &:after{
+        transform: scaleX(-1);
+      }
+      &:before{
+        transform: scaleX(-1);
+      }
+    }
+  }
   .container, .row {
     min-height: inherit;
   }
