changed arrows, added package pages, some response fixes

--- a/src/styles/blocks/_feedback-section.scss
+++ b/src/styles/blocks/_feedback-section.scss
@@ -88,4 +88,33 @@
       }
     }
   }
+  .swiper-button-next,.swiper-button-prev{
+    background-image:none;
+    top: 30%;
+    width: auto;
+    height: auto;
+    margin-top: 0;
+    svg{
+      width:30px;
+      height: auto;
+      @media screen and (max-width: 1200px){
+        width:25px;
+      }
+    }
+    @media screen and (max-width: 992px){
+      display: none;
+    }
+  }
+  .swiper-button-next{
+    right: -30px;
+    @media screen and (max-width: 1200px){
+      right:0;
+    }
+  }
+  .swiper-button-prev{
+   left: -30px;
+    @media screen and (max-width: 1200px){
+      left:0;
+    }
+  }
 }
