--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,160 +1,9 @@
-/*------------------Mobile menu---------------------*/
-.mobile-menu-wrapper {
-  display: none;
-  padding: 0 20px;
-  @media screen and (max-width: 992px) {
-    display: block;
-  }
-  .mobile-menu-btn {
-    height: 100%;
-    &:hover {
-      cursor: pointer;
-    }
-    span {
-      display: block;
-      width: 35px;
-      height: 3px;
-      background: #fff;
-      transition: all 0.3s;
-      &:not(:last-child) {
-        margin-bottom: 9px;
-      }
-    }
-    &.active {
-      transition: all 0.3s;
-      span {
-        background: $red;
-        margin-bottom: 0;
-        &:last-child {
-          display: none;
-        }
-        &:first-child {
-          transform: rotate(45deg) translate(1px, 0);
-        }
-        &:nth-child(2) {
-          transform: rotate(-45deg) translate(1px, 0);
-        }
-      }
-    }
-  }
-  .mobile-menu {
-    .menu {
-      visibility: hidden;
-      max-height: 0;
-      margin: 0;
-      padding: 0;
-      list-style-type: none;
-      width: 100%;
-      li {
-        display: block;
-        text-align: center;
-        line-height: 1;
-        &:not(:last-child) {
-          padding-bottom: 30px;
-          margin-bottom: 30px;
-          position: relative;
-          &:after {
-            position: absolute;
-            content: '';
-            display: block;
-            height: 1px;
-            width: 55px;
-            background: $blue;
-            bottom: 0;
-            left: 50%;
-            transform: translate(-50%, 0);
-          }
-        }
-        a {
-          color: $dark;
-          font-size: 40px;
-        }
-      }
-    }
-    &.active {
-      .menu {
-        visibility: visible;
-        transition: all 2s;
-        max-height: 100%;
-      }
-    }
-  }
+body.simple-page{
+  padding-top: 120px;
 }
 
-/*------------------Desktop nav-------------------------*/
-.site-header {
-  &.sticky {
-    .desktop-menu-wrapper {
-      .menu {
-        li {
-          &:not(:last-child) {
-            a {
-              color: $dark;
-            }
-          }
-        }
-      }
-    }
-  }
-}
 
-.desktop-menu-wrapper {
-  @media screen and (max-width: 992px) {
-    display: none;
-  }
-  .logo-wrapper {
-    background: rgba(255, 255, 255, 0.25);
-    position: relative;
-    &:after {
-      position: absolute;
-      content: '';
-      display: block;
-      height: 100%;
-      width: 100%;
-      top: 0;
-      left: 0;
-      box-shadow: 0px 0px 48px 48px rgba(255, 255, 255, 0.25);
-    }
-    a {
-      display: block;
-      .logo {
-        max-width: 100%;
-        display: block;
-        height: auto;
-      }
-    }
-  }
-  .menu {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    width: 100%;
-    li {
-      display: inline-block;
-      line-height: 1;
-      a {
-        font-size: 15px;
-        color: #fff;
-        font-weight: 600;
-        &:not(.menu-button) {
-          &:hover, &:focus {
-            color: $red;
-            text-decoration: none;
-            outline: none;
-          }
-        }
-        &.menu-button {
-          &.btn {
-            padding: 7px 15px;
-          }
-        }
-      }
-      &:not(:last-child) {
-        margin-right: 15px;
-      }
-    }
-  }
-}
+
 
 /*----------------Hero banner---------------------------*/
 .hero-banner-wrapper {
