--- a/src/styles/blocks/_guarantee-sections.scss
+++ b/src/styles/blocks/_guarantee-sections.scss
@@ -1,6 +1,14 @@
 /*-----------------------Guarantee sections-------------------------------*/
 
 .guarantee-section {
+  .row{
+    & > div{
+      background: $blue;
+      @media screen and (min-width: 768px){
+        background: transparent;
+      }
+    }
+  }
   .main-guarantee-text {
     height: 100%;
     .row {
@@ -20,9 +28,15 @@
         line-height: 0.8;
         text-transform: uppercase;
         color: #fff;
-        text-align: right;
-        @media screen and (max-width: 767px){
-          text-align: center;
+        text-align: center;
+        br{
+          display: none;
+        }
+        @media screen and (min-width: 768px){
+          text-align: right;
+          br{
+            display: none;
+          }
         }
       }
       .guarantee-subtitle {
@@ -30,27 +44,56 @@
         color: $dark-small-title;
         font-size: 25px;
         font-weight: 800;
-        text-align: right;
-        @media screen and (max-width: 767px){
-          text-align: center;
+        text-align: center;
+        br{
+          display: none;
+        }
+        @media screen and (min-width: 768px){
+          text-align: right;
+          br{
+            display: block;
+          }
         }
       }
     }
   }
   .promise-text-block {
-    padding: 80px 0 40px;
-    margin-left: 25px;
+    padding: 0 0 40px;
+    @media screen and (min-width: 768px){
+      padding: 80px 0 40px;
+      margin-left: 25px;
+    }
+
     .small-title {
+
+      color:#fff;
+      text-align: center;
       margin-bottom: 20px;
+      @media screen and (min-width: 768px){
+        color:$body-text-color;
+        text-align: left;
+      }
     }
     .promise-description {
       margin-bottom: 55px;
+      color:#fff;
+      text-align: center;
+      @media screen and (min-width: 768px){
+       color:$body-text-color;
+        text-align: left;
+      }
       p {
         font-size: 15px;
         line-height: 2;
       }
     }
     .small-description {
+      color:#fff;
+      text-align: center;
+      @media screen and (min-width: 768px){
+        color:$body-text-color;
+        text-align: left;
+      }
       p {
         font-size: 10px;
         font-style: italic;
