--- a/src/styles/blocks/_portfolio-section.scss
+++ b/src/styles/blocks/_portfolio-section.scss
@@ -34,5 +34,30 @@
         }
       }
     }
+    .swiper-button-next,.swiper-button-prev{
+      background-image:none;
+      svg{
+        width:30px;
+        height: auto;
+        @media screen and (max-width: 1200px){
+          width:25px;
+        }
+      }
+      @media screen and (max-width: 992px){
+        display: none;
+      }
+    }
+    .swiper-button-next{
+      right: -30px;
+      @media screen and (max-width: 1200px){
+        right:0;
+      }
+    }
+    .swiper-button-prev{
+      left: -30px;
+      @media screen and (max-width: 1200px){
+       left:0;
+      }
+    }
   }
 }
