--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import "vars";
 @import "mixins";
 @import "~bootstrap/scss/bootstrap";
+@import "~swiper/dist/css/swiper.min.css";
 @import "base";
 @import "layout";
 
