--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -2,7 +2,7 @@
 
 body.home {
   .site-header {
-    position: fixed;
+    position: absolute;
     width: 100%;
     left: 0;
     top: 0;
@@ -33,7 +33,14 @@ body.home {
       }
     }
     &.sticky {
+      position: fixed;
+      width: 100%;
+      left: 0;
+      top: 0;
+      z-index: 99999;
       background: #fff;
+      box-shadow: 0px 1px 8px 0px rgba(205, 205, 205, 1);
+      animation:slide-down 0.6s;
       .desktop-menu-wrapper {
         .menu {
           li {
@@ -57,12 +64,7 @@ body.home {
 /*-----------------Standard header-----------------------------*/
 .site-header {
   padding: 20px 0;
-  background: #fff;
-  position: fixed;
-  width: 100%;
-  left: 0;
-  top: 0;
-  z-index: 99999;
+  animation:slide-up;
   &.active{
     background: #fff !important;
     height: 100%;
@@ -81,6 +83,7 @@ body.home {
     z-index: 99999;
     background: #fff;
     box-shadow: 0px 1px 8px 0px rgba(205, 205, 205, 1);
+    animation:slide-down 0.6s;
     .logo-wrapper {
       a {
         img {
@@ -94,8 +97,8 @@ body.home {
       }
     }
   }
-  &.active {
-    background: #fff;
+  &.not-sticky{
+    animation: slide-up;
   }
 }
 
@@ -268,5 +271,33 @@ body.home {
         margin-right: 15px;
       }
     }
+  }
+}
+
+
+
+/*------------------Menu animation------------------------*/
+
+
+@keyframes slide-down {
+  0% {
+
+    transform: translateY(-100%);
+  }
+  100% {
+
+    transform: translateY(0);
+  }
+}
+
+
+@keyframes slide-up {
+  0% {
+
+    transform: translateY(0);
+  }
+  100% {
+
+    transform: translateY(-100%);
   }
 }
