fixed logo click

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -235,6 +235,8 @@ body.home {
     }
     a {
       display: block;
+      position: relative;
+      z-index: 9;
       .logo {
         max-width: 100%;
         display: block;
