--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -11,6 +11,11 @@ body {
 html,
 body {
   height: 100%;
+  &.simple-page{
+    &.sticky-active{
+      padding-top: 120px;
+    }
+  }
 }
 
 .simple-text {
