fix font awesome path

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,11 @@
 // Vendors
 @import "vars";
 @import "mixins";
+
 @import "~bootstrap/scss/bootstrap";
 @import "~swiper/dist/css/swiper.min.css";
+@import "~font-awesome/scss/font-awesome";
+
 @import "base";
 @import "layout";
 
