--- a/src/styles/blocks/_describe-package-section.scss
+++ b/src/styles/blocks/_describe-package-section.scss
@@ -4,7 +4,12 @@
   padding: 50px 0;
   .icons-list-main-container{
     margin-top: 40px;
-    padding: 30px 0;
+    padding: 30px 15px;
+    border: 1px solid $blue;
+    @media screen and (max-width: 992px){
+      padding: 25px;
+      margin-bottom: 25px;
+    }
   }
   .package-title {
     font-size: 60px;
@@ -49,6 +54,18 @@
     }
     &:first-child{
       margin-right: 15px;
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .package-button-wrapper,
+  .buttons-wrapper {
+    flex-wrap: wrap;
+    .btn {
+      width: 100%!important;
+      max-width: 320px;
+      margin: 0 0 15px 0!important;
     }
   }
 }
