--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -5,6 +5,9 @@
   color: $footer-color;
   font-size: 12px;
   padding: 30px 0;
+  @media (max-width: 576px) {
+    text-align: center;
+  }
   .copyright-block {
     span {
       color: #fff;
@@ -12,6 +15,9 @@
   }
   .footer-menu {
     text-align: right;
+    @media (max-width: 576px) {
+      text-align: center;
+    }
     ul {
       list-style-type: none;
       margin: 0;
