--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -10,7 +10,7 @@
   overflow-y: hidden;
   .bottom-banner-triangles {
     position: absolute;
-    bottom: 0;
+    bottom: -1px;
     width: 100%;
     height: 90px;
     z-index: 3;
