--- a/src/styles/blocks/_questions-section.scss
+++ b/src/styles/blocks/_questions-section.scss
@@ -19,6 +19,9 @@
         text-decoration: none;
         &.collapsed {
           color: $body-text-color;
+          &:hover {
+            color: $red;
+          }
         }
 
         svg {
