--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,5 +1,3 @@
-
-
 /*----------------Hero banner---------------------------*/
 .hero-banner-wrapper {
   position: relative;
@@ -86,6 +84,17 @@
       }
     }
   }
+}
+
+/*----------------Divider---------------------------*/
+.divider {
+    content: "";
+    width: 75px;
+    height: 5px;
+    background: $red;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
 }
 
 
