--- a/src/styles/blocks/_packages-section.scss
+++ b/src/styles/blocks/_packages-section.scss
@@ -96,3 +96,49 @@
     padding: 40px 0;
   }
 }
+
+/*-----------------------Popup------------------------------------*/
+
+.contact-popup {
+  display: none;
+  position: fixed;
+  z-index: 100;
+  width: 500px;
+  top: 35%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -250px;
+  .red-bg {
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 46px 10px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 46px 10px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 46px 10px rgba(0,0,0,0.75);
+    .contact-form-wrapper {
+      .small-title {
+        font-size: 25px;
+      }
+      .form-quote-text {
+        font-size: 16px;
+      }
+      form {
+        .form-field {
+          input {
+            font-size: 15px;
+            width: 335px;
+          }
+          textarea {
+            font-size: 15px;
+            width: 335px;
+          }
+        }
+      }
+    }
+  }
+  .close-popup {
+    padding: 5px;
+    opacity: .25;
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
