--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,7 @@
 
 @import "~bootstrap/scss/bootstrap";
 @import "~swiper/dist/css/swiper.min.css";
-@import "~font-awesome/scss/font-awesome";
+// @import "~font-awesome/scss/font-awesome";
 
 @import "base";
 @import "layout";
