fixed responsiveness of contact pop-ip

--- a/src/styles/blocks/_packages-section.scss
+++ b/src/styles/blocks/_packages-section.scss
@@ -142,3 +142,14 @@
     }
   }
 }
+
+@media screen and (max-width: 505px){
+  .contact-popup {
+    // position: absolute;
+    width: 100%;
+    top: 20%;
+    left: 0;
+    margin-top: 0px;
+    margin-left: 0px;
+  }
+}
