updated map and fixed arrows

--- a/src/styles/blocks/_feedback-section.scss
+++ b/src/styles/blocks/_feedback-section.scss
@@ -20,6 +20,7 @@
       background: #fff;
       position: relative;
       margin-bottom: 50px;
+      min-height: 385px;
       @media (max-width: 400px) {
         width: 100%;
       }
