--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -54,6 +54,9 @@ body.home {
               a {
                 color: $dark;
               }
+              .red-btn {
+                color: white;
+              }
             }
           }
           a {
